# PaidFireIndia

./: .gitignore  CMakeLists.txt  README.md  README_UPDATED.md  build.gradle  gradle.properties  settings.gradle
backend/firebase/: FirebaseConfig.json  auth-functions.js  firebase-config.json  init.js
docs/: ARCHITECTURE.md  DEVELOPMENT.md  OAUTH_SETUP.md
engine/core/: Engine.cpp  Engine.h
engine/graphics/: GraphicsSystem.cpp  GraphicsSystem.h
engine/networking/: NetworkingSystem.cpp  NetworkingSystem.h
engine/physics/: PhysicsSystem.cpp  PhysicsSystem.h
game/modes/: BattleRoyale.cpp  BattleRoyale.h  CSRanked.cpp  CSRanked.h
mobile/android/: AndroidManifest.xml  AppManagerActivity.java  AuthManager.java  DiamondStoreActivity.java  GameModeAdapter.java  GameSurfaceView.java  GameplayActivity.java  GraphicsSettings.java  GraphicsSettingsActivity.java  LoginActivity.java  MainActivity.java  PranjalGameEngine.java  activity_app_manager.xml  activity_diamond_store.xml  activity_gameplay.xml  activity_graphics_settings.xml  activity_login.xml
src/engine/audio/: AudioSystem.cpp  AudioSystem.h
src/engine/core/: Engine.cpp  Engine.h  GameLoop.cpp  GameLoop.h
src/engine/graphics/: GraphicsSystem.cpp  GraphicsSystem.h  Renderer.cpp  Renderer.h
src/engine/input/: InputSystem.cpp  InputSystem.h
src/engine/network/: NetworkManager.cpp  NetworkManager.h
src/engine/physics/: PhysicsSystem.cpp  PhysicsSystem.h
